# swagger/v1/swagger.yaml
@@ -4,61 +4,6 @@ info:
   title: API V1
   version: v1
 paths:
-  "/api/v1/login":
-    post:
-      summary: login
-      tags:
-      - Auth
-      parameters: []
-      responses:
-        '200':
-          description: successful
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                email:
-                  type: string
-                password:
-                  type: string
-              required:
-              - email
-              - password
-  "/api/v1/signup":
-    post:
-      summary: signup
-      tags:
-      - Register
-      parameters: []
-      responses:
-        '200':
-          description: successful
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                username:
-                  type: string
-                email:
-                  type: string
-                password:
-                  type: string
-              required:
-              - username
-              - email
-              - password
-  "/api/v1/logout": 
-    delete:
-    summary: logout
-    tags:
-    - Logout
-    responses:
-      '200':
-        description: successful
   "/api/v1/posts/{post_id}/comments":
     parameters:
     - name: post_id
@@ -309,6 +254,31 @@ paths:
       responses:
         '200':
           description: successful
+  "/api/v1/signup":
+    post:
+      summary: signup
+      tags:
+      - Register
+      parameters: []
+      responses:
+        '200':
+          description: successful
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                username:
+                  type: string
+                email:
+                  type: string
+                password:
+                  type: string
+              required:
+              - username
+              - email
+              - password
   "/api/v1/posts/{post_id}/comments/{comment_id}/replies":
     parameters:
     - name: post_id
@@ -429,7 +399,7 @@ paths:
     - name: Authorization
       in: header
       required: true
-      description: Authorization token
+      description: Authorization
       schema:
         type: string
     get:
@@ -443,4 +413,4 @@ servers:
 - url: https://{defaultHost}
   variables:
     defaultHost:
-      default: blog-v4.onrender.com
+      default: www.example.com
